[project]
name = "salmon_core"
version = "3.0.3"
authors = [
  { name="Max Kas"},
]
description = "Salmon AES256 CTR encryption library"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  'typeguard >= 4.1.5',
  'pycryptodome >= 3.19.0',
  'wrapt >= 1.16.0',
]

[project.urls]
Homepage = "https://github.com/mku11/Salmon-AES-CTR"
Issues = "https://github.com/mku11/Salmon-AES-CTR/issues"
