[project]
name = "salmon_fs"
version = "1.0.6"
authors = [
  { name="Max Kas"},
]
description = "Salmon AES256 CTR filesystem encryption library"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  'python-interface >= 1.6.1',
  'typeguard >= 4.1.5',
  'pycryptodome >= 3.19.0',
  'salmon_core == 1.0.6',
]

[project.urls]
Homepage = "https://github.com/mku11/Salmon-AES-CTR"
Issues = "https://github.com/mku11/Salmon-AES-CTR/issues"