[project]
name = "salmon_fs"
version = "2.1.0"
authors = [
  { name="Max Kas"},
]
description = "Salmon AES256 CTR filesystem encryption library"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  'python-interface >= 1.6.1',
  'typeguard >= 4.1.5',
  'pycryptodome >= 3.19.0',
  'salmon_core == 2.1.0',
  'wrapt >= 1.16.0',
]

[project.urls]
Homepage = "https://github.com/mku11/Salmon-AES-CTR"
Issues = "https://github.com/mku11/Salmon-AES-CTR/issues"